# Learning-Programming-Massively-Parallel-Processors

./: .clangd  .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci-auto-format-and-commit.yml
configs/: ctests.yml  lib-tests.yml
csrc/: CMakeLists.txt  vcpkg.json
csrc/cmake/: cmake-parameters.md
csrc/cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
csrc/cmake/libraries/: libcuda.cmake  libtorch.cmake
csrc/cmake/utils/: common.cmake  lib-install.cmake  logging.cmake  run-python.cmake
csrc/cmake/vcpkg-triplets/: x64-linux-no-cxx11abi.cmake  x64-linux.cmake
csrc/include/pmpp/: pch.hpp  pmpp.h  system.h  system.hpp
csrc/include/pmpp/basic/: loggable_base.hpp
csrc/include/pmpp/ops/: cvt_rgb_to_gray.hpp  launcher.hpp  vec_add.hpp  vec_compare.hpp
csrc/include/pmpp/types/: c_types.h  concepts.hpp  cu_types.cuh  cxx_types.hpp  device.hpp  extented_concepts.hpp  torch_types.hpp  types.hpp
csrc/include/pmpp/utils/: address.hpp  common.cuh  common.hpp  math.hpp
csrc/lib/: CMakeLists.txt
csrc/lib/ops/: ops.hpp  torch_bind.cpp  torch_bind.cu  torch_bind.hpp  torch_impl.hpp
csrc/lib/ops/alphabetHistogram/: op.cpp  op.cu  op.cuh  op.hpp  torch-impl.cpp
csrc/lib/ops/conv2d/: op.cpp  op.cu  op.cuh  op.hpp  torch_impl.cpp
csrc/lib/ops/cvtRGBtoGray/: op.cpp  op.cu  op.cuh  op.hpp  torch_impl.cpp
csrc/lib/ops/matmul/: op.cpp  op.cu  op.cuh  op.hpp  torch_impl.cpp
csrc/lib/ops/prefixSum/: op.cuh  op.hpp
csrc/lib/ops/reduction/: op.cuh  op.hpp
csrc/lib/ops/stencil/: op.cu
csrc/lib/ops/vec-add/: op.cpp  op.cu  torch-bind.cpp
csrc/lib/ops/vecAdd/: op.cpp  op.cu  op.cuh  op.hpp  torch_impl.cpp
csrc/scripts/: build.sh
csrc/test/: CMakeLists.txt  main.cpp
csrc/test/OpTest/: AlphabetHistogram.cpp  Conv2D.cpp  MulReduction.cpp  OpTest.hpp  PrefixSum.cpp  cvtRGBtoGray.cpp  matmul.cpp  vecAdd.cpp
csrc/test/include/pmpp/: test_pipeline.hpp
csrc/test/test_ops/: cvtRGBtoGray.cpp  matmul.cpp  op_test.hpp  vecAdd.cpp  vec_add.cpp
pmpp/models/: attention.py  grpo.py  kldiv.py  mha_kernels.py  ppo.py
scripts/: build.sh  lib-test.sh  nsight-profile.sh
src/pmpp/: __init__.py
src/pmpp/models/: attention.py
test/: test.py
