[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmpp"
version = "0.1.0"
description = ""
authors = [{ name = "jamesnulliu", email = "jamesnulliu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [ 
    "numpy", 
    "torch>=2.0.0", 
    "torchvision", 
    "torchaudio" 
]